Calendare module work, SSL work

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,5 @@
 (next release) on (date of next release)
+16.05.00 KB: Calendar module does repeating events (minor glitches still)
 15.05.00 KB: Mahogany now runs as "root", too. Fixes to MailCollector and invocation
              of filters. de.po is up to date.
 12.05.00 VZ: added "compose with template" and "edit templates"
