Pine importer more or less works

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,5 @@
 (next release) on (date of next release)
+23.05.00 VZ: an importer for PINE added (settings/folders/address books)
 22.05.00 VZ: template dialog allows to choose any kind of templates
 19.05.00 VZ: vCards can also be exported
 17.05.00 VZ: added possibility to attach vCards to outgoing messages
