filter rules import

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,5 @@
 (next release) on (date of next release)
+26.05.00 VZ: importing filters from XFMail
 23.05.00 VZ: importers for PINE and XFMail added (settings/folders/address books)
 22.05.00 VZ: template dialog allows to choose any kind of templates
 19.05.00 VZ: vCards can also be exported
