--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 (next release) on (date of next release)
+02.06.00 VZ: improved highlighting in the folder tree
+02.06.00 KB: authentification for SMTP and NNTP
 26.05.00 VZ: importing filters from XFMail
 23.05.00 VZ: importers for PINE and XFMail added (settings/folders/address books)
 22.05.00 VZ: template dialog allows to choose any kind of templates
