--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,5 @@
 (next release) on (date of next release)
+02.06.00 VZ: creating MH folders with the wizard finally works
 02.06.00 VZ: improved highlighting in the folder tree
 02.06.00 KB: authentification for SMTP and NNTP
 26.05.00 VZ: importing filters from XFMail
