--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,5 @@
 (next release) on (date of next release)
+04.06.00 VZ: Windows version now has the same (decent) icons as Unix one
 02.06.00 VZ: creating MH folders with the wizard finally works
              "d&d"ing messages to group or root folder won't delete them
 02.06.00 VZ: improved highlighting in the folder tree
