--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,9 @@
 (next release) on (date of next release)
+30.05.00 KB: Split part of MessageView functionality into a separate class
+             to be shared with ComposeView.
+             Replaced several mail_check() calls with mail_ping() in
+             MailFolderCC code.
+23.05.00 VZ: an importer for PINE added (settings/folders/address books)
 04.06.00 VZ: Windows version now has the same (decent) icons as Unix one
 02.06.00 VZ: creating MH folders with the wizard finally works
              "d&d"ing messages to group or root folder won't delete them
