--- a/CHANGES
+++ b/CHANGES
@@ -1,15 +1,18 @@
 (next release) on (date of next release)
+
+04.06.00 KB: added configuration option for file folder format on creation
+             added upgrade message about changed server settings
+             Fixes and autoconf support for new wxMessageView code.
+04.06.00 VZ: Windows version now has the same (decent) icons as Unix one
+02.06.00 VZ: creating MH folders with the wizard finally works
+             "d&d"ing messages to group or root folder won't delete them
+02.06.00 VZ: improved highlighting in the folder tree
+02.06.00 KB: authentification for SMTP and NNTP
 30.05.00 KB: Split part of MessageView functionality into a separate class
              to be shared with ComposeView.
              Replaced several mail_check() calls with mail_ping() in
              MailFolderCC code.
 23.05.00 VZ: an importer for PINE added (settings/folders/address books)
-04.06.00 VZ: Windows version now has the same (decent) icons as Unix one
-             the status bar/title bar messages are now customizable
-02.06.00 VZ: creating MH folders with the wizard finally works
-             "d&d"ing messages to group or root folder won't delete them
-02.06.00 VZ: improved highlighting in the folder tree
-02.06.00 KB: authentification for SMTP and NNTP
 26.05.00 VZ: importing filters from XFMail
 23.05.00 VZ: importers for PINE and XFMail added (settings/folders/address books)
 22.05.00 VZ: template dialog allows to choose any kind of templates
