--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,5 @@
 (next release) on (date of next release)
+06.06.00 VZ: added a "Folder" menu in the main frame, renamed "File" -> "Mail"
 05.06.00 KB: added Identity redirection support to Profile classes
              added MLogCircle and error guessing to folder and network operations
 04.06.00 KB: added configuration option for file folder format on creation
