--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,5 @@
 (next release) on (date of next release)
+10.06.00 VZ: dialog for editing the order of folder view columns
 10.06.00 KB: Finished OpenSSL dynamic loading
              Fixed next-unread-menu and some translations/keybindings
              Added score and colour support to filters
