--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,8 @@
 (next release) on (date of next release)
+11.06.00 KB: Filter rules editor shows program code and should check for
+             consistency. Manual editing supported.
+             Install Wizard fixes, better default values for servers. No more
+             network autodetection for Unix.
 10.06.00 VZ: dialog for editing the order of folder view columns
              sorting of folder view by any column on column click
 10.06.00 KB: Finished OpenSSL dynamic loading
