0. wrote some docs about Windows build 1. added wxFILEDLG_USE_NAME flag which allows to use the value specified    (and not the one stored in config) with wxPFileSelector 2. changed Message::GetHeaderLine() to return bool, not void 3. added font encoding support to wxLayout 4. some code for message i18n - it is incredibly dumb but seems to work

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,5 @@
 (next release) on (date of next release)
+14.06.00 VZ: viewing messages in non-default charsets
 11.06.00 KB: Filter rules editor shows program code and should check for
              consistency. Manual editing supported.
              Install Wizard fixes, better default values for servers. No more
