--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 (next release) on (date of next release)
+14.06.00 VZ: RFC 2047 compliant header parsing for the non ASCII strings in
+             headers
 14.06.00 VZ: viewing messages in non-default charsets
 11.06.00 KB: Filter rules editor shows program code and should check for
              consistency. Manual editing supported.
