--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,8 @@
 (next release) on (date of next release)
+14.06.00 KB: MailCollector no longer keeps all incoming folders open to save
+             resources on servers and make collection more reliable.
+             Folders are now kept around after last DecRef() for a configurable
+             delay to speed up re-opening.
 14.06.00 VZ: RFC 2047 compliant header parsing for the non ASCII strings in
              headers and displaying them using appropriate fonts
              The folder view is immediately updated after options change.
