--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,5 @@
 (next release) on (date of next release)
+15.06.00 VZ: added "Message|Language" menu for manual language selection
 14.06.00 KB: MailCollector no longer keeps all incoming folders open to save
              resources on servers and make collection more reliable.
              Folders are now kept around after last DecRef() for a configurable
