--- a/TODO
+++ b/TODO
@@ -30,6 +30,7 @@ as the MailFolderCC.cpp code should take care of that itself.
 
 *** VZ: this is my notepad, don't add anything here, it's only for myself
 
+1. add listbox for ReplaceFromAdr in the options dlg
 2. trailing ",0" in wxPTreeCtrl should probably be discarded?
 3. Subfolders dialog must
  a) disable itself until the folder retrieval is finished
