--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 (next release) on (date of next release)
+27.06.00 KB: added DeleteDuplicates functionality, fixed (?) folderview selection behaviour
+             for auto-show-first and move focus on after delete/undelete/etc
 19.06.00 VZ: messages from oneself are (optionally) marked as such
 15.06.00 VZ: added "Message|Language" menu for manual language selection
 14.06.00 KB: MailCollector no longer keeps all incoming folders open to save
