--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,5 @@
 (next release) on (date of next release)
+30.06.00 VZ: made it possible to attach several files at once
 27.06.00 KB: added DeleteDuplicates functionality, fixed (?) folderview selection behaviour
              for auto-show-first and move focus on after delete/undelete/etc
 19.06.00 VZ: messages from oneself are (optionally) marked as such
