--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 (next release) on (date of next release)
+04.07.00 VZ: added "reverse order" checkboxes to sort dialog, made possible to
+             reverse sort by arrival order
 04.07.00 KB: wxOptionsDlg now automatically stores all Field_Password entries
 	     encrypted, SMTP/NNTP server passwords are now encrypted in config
              keep-open flag now only enforced for Outbox
