1. Nerijus' i18n patch 2. GUI support for editing MP_FROM_REPLACE_ADDRESSES 3. MP_SET_REPLY_FROM_TO_D is now 0

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 (next release) on (date of next release)
+19.07.00 VZ: it is possible to specify several address which should be replaced
+             with the destination address when the corresponding option is on
 18.07.00 VZ: fixed serious bug in handling options changes, they are now
              handled correctly and [Apply] and [Cancel] behave as expected
              added the identity choice to the toolbar (advanced mode only)
